Updated pom file